force-app/main/default/objects/Queue_Depth_Change__e/Queue_Depth_Change__e.object-meta.xml
<CustomObject>
    <description>Published when a Case queue's open-case count changes. Relayed to the queue indicator device via AWS IoT.</description>
    <label>Queue Depth Change</label>
    <pluralLabel>Queue Depth Changes</pluralLabel>
</CustomObject>