force-app/main/default/objects/Queue_Depth_Change__e/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>