force-app/main/default/objects/Queue_Depth_Change__e/fields/Intensity__c.field-meta.xml
<CustomField>
    <fullName>Intensity__c</fullName>
    <description>Open case count scaled 0-100 against the binding's Full Speed Depth.</description>
    <label>Intensity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>