force-app/main/default/objects/Queue_Depth_Change__e/fields/Motor_State__c.field-meta.xml
<CustomField>
    <fullName>Motor_State__c</fullName>
    <description>IDLE or ACTIVE. Text rather than Picklist: platform events do not support picklist fields.</description>
    <label>Motor State</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>