force-app/main/default/objects/Queue_Depth_Change__e/fields/Open_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Case_Count__c</fullName>
    <label>Open Case Count</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>