force-app/main/default/objects/Queue_Depth_Change__e/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <label>Queue Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>